# x402

./: README.md
.github/workflows/: publish_npm_scoped_x402_stellar.yml
docs/: faq.md  sdk-features.md
docs/advanced-concepts/: lifecycle-hooks.mdx
docs/core-concepts/: client-server.md  facilitator.md
docs/extensions/: bazaar.mdx  payment-identifier.mdx
e2e/: .env-local  README.md  pnpm-lock.yaml  test.ts
e2e/clients/axios/: .env-local  README.md  index.ts  package.json  test.config.json
e2e/clients/fetch/: README.md  index.ts  package.json  test.config.json
e2e/clients/mcp-go/: go.mod  go.sum
e2e/facilitators/typescript/: README.md  index.ts  package.json  test.config.json
e2e/scripts/: permit2-approval.ts
e2e/servers/express/: README.md  index.ts  package.json  test.config.json
e2e/servers/hono/: README.md  index.ts  package.json  test.config.json
e2e/servers/next/: .env-local  README.md  package.json  proxy.ts  test.config.json  tsconfig.json
e2e/src/: types.ts
e2e/src/clients/: generic-client.ts
e2e/src/facilitators/: facilitator-manager.ts  generic-facilitator.ts
e2e/src/networks/: networks.ts
e2e/src/servers/: generic-server.ts
examples/go/clients/advanced/: all_networks.go  custom_transport.go  error_recovery.go  hooks.go  multi_network_priority.go
examples/go/clients/custom/: main.go
examples/go/clients/http/: main.go
examples/go/clients/payment-identifier/: main.go
examples/go/facilitator/basic/: main.go
examples/python/clients/advanced/: all_networks.py  builder_pattern.py  hooks.py  preferred_network.py
examples/python/clients/httpx/: main.py
examples/python/clients/payment-identifier/: main.py
examples/python/clients/requests/: main.py
examples/typescript/: pnpm-lock.yaml  pnpm-workspace.yaml
examples/typescript/clients/advanced/: .env-local  README.md  all_networks.ts  builder-pattern.ts  package.json
examples/typescript/clients/axios/: index.ts
examples/typescript/clients/fetch/: index.ts
examples/typescript/clients/payment-identifier/: index.ts
examples/typescript/clients/sign-in-with-x/: index.ts
examples/typescript/facilitator/: .env-local
examples/typescript/facilitator/advanced/: README.md  all_networks.ts  bazaar.ts  package.json
examples/typescript/facilitator/basic/: index.ts
examples/typescript/servers/advanced/: .env-local  README.md  all_networks.ts  package.json
examples/typescript/servers/express/: package.json
go/: CHANGELOG.md  FACILITATOR.md  go.mod
go/.changes/unreleased/: added-20260227-175046.yaml  added-20260302-103254.yaml  added-svm-settlement-cache.yaml  changed-20260227-153504.yaml
go/extensions/bazaar/: facilitator_client.go  facilitator_client_test.go
go/http/: facilitator_client.go  paywall.go  paywall_test.go  server.go  server_test.go
go/http/gin/: middleware.go  middleware_test.go
go/mechanisms/evm/: constants.go  types.go
go/mechanisms/svm/: README.md  constants.go  settlement_cache.go
python/x402/: CHANGELOG.md  pyproject.toml
python/x402/changelog.d/: 1359.bugfix.md  1430.bugfix.md  svm-duplicate-settlement.bugfix.md
python/x402/http/: __init__.py  types.py  x402_http_server.py  x402_http_server_base.py
python/x402/http/middleware/: fastapi.py  flask.py
python/x402/mechanisms/evm/: __init__.py  constants.py  utils.py
python/x402/mechanisms/evm/exact/: server.py
python/x402/mechanisms/evm/v1/: constants.py  utils.py
python/x402/mechanisms/svm/: README.md  __init__.py  constants.py  settlement_cache.py  utils.py
python/x402/mechanisms/svm/exact/: facilitator.py  register.py
python/x402/mechanisms/svm/exact/v1/: facilitator.py
python/x402/schemas/: responses.py
python/x402/tests/unit/http/middleware/: test_fastapi.py  test_flask.py
python/x402/tests/unit/mechanisms/evm/: test_client.py  test_facilitator.py  test_index.py  test_server.py  test_v1_utils.py
python/x402/tests/unit/mechanisms/svm/: test_facilitator.py
specs/: x402-specification-v1.md  x402-specification-v2.md
specs/schemes/exact/: scheme_exact_svm.md
specs/schemes/upto/: scheme_upto.md  scheme_upto_evm.md
specs/transports-v2/: http.md
typescript/: pnpm-lock.yaml
typescript/.changeset/: add-x402version-to-facilitator-request-types.md  bold-mice-sink.md  clear-tables-teach.md  fix-svm-duplicate-settlement.md  red-geese-sit.md
typescript/site/: package.json
(+25 files in other folders)
